--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -11,4 +11,17 @@
     <string name="main_information">i</string>
     <string name="image_desc">Main screen logo</string>
     <string name="lang">Idioma</string>
+    <string name="recognition_game_text"> juego de reconocimiento de color </string>
+    <string name="START_colorGame">INICIAR</string>
+    <string name="START_colorGame_text1">Coloque su folleto eduFUN frente a usted y abra la página de coincidencia de colores.</string>
+    <string name="START_colorGame_text2">El juego pedirá un color en la pantalla.</string>
+    <string name="START_colorGame_text3">Apunte la cámara hacia el color y presione "OK"</string>
+    <string name="START_colorGame_text4">Cuando esté listo, presione "INICIAR"</string>
+    <string name="animal_gameText">juego de animales</string>
+    <string name="animal_gameText1">Coloque su folleto eduFUN frente a usted y abra la página del juego de animales.</string>
+    <string name="animal_gameText2">El juego pedirá un animal por su nombre.</string>
+    <string name="animal_gameText3">Apunte la cámara al código QR al lado del animal y presione "OK"</string>
+    <string name="animal_gameText4">Cuando esté listo, presione "INICIAR"</string>
+    <string name="animal_gameText5">INICIAR</string>
+    <string name="info">Una aplicación con diferentes juegos educativos para niños, que utiliza diferentes interacciones con dispositivos.</string>
 </resources>
