--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,4 +33,7 @@
     <string name="animal_game_started_text6">Inorrecto!</string>
     <string name="info_authors">hecho por: Ralfs and Kristers</string>
     <string name="info">Una aplicación con diferentes juegos educativos para niños, que utiliza diferentes interacciones con dispositivos.</string>
+    <string name="counting_game_get_ready">PREPARARSE!</string>
+    <string name="countdown">%1$d</string>
+    <string name="counting_game_count">¡CONTAR!</string>
 </resources>
