--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -38,5 +38,22 @@
     <string name="button_1">2$d</string>
     <string name="button_2">3$d</string>
     <string name="counting_game_count">¡CONTAR!</string>
+    <string name="button_3">%1$d</string>
+    <string name="counting_game_what_is">¿Qué es la respuesta?</string>
+    <string name="counting_finish_correct">%1$s</string>
+    <string name="counting_finish_incorrect">%1$s</string>
+    <string name="counting_finish_playagain">JUEGA DE NUEVO</string>
+    <string name="counting_finish_exit">SALIDA</string>
+    <string name="color_game_color_name">color:</string>
+    <string name="color_game_random_color"> </string>
+    <string name="color_game_ok">OK</string>
+    <string name="color_game_your_answer">tu respuesta:</string>
+    <string name="color_game_answer"> </string>
+    <string name="color_game_playagain">JUEGA DE NUEVO</string>
+    <string name="color_game_takephoto">ESCOGER</string>
+
+
+    <string name="animal_game_reload">OTRA VEZ</string>
+    <string name="change_color">cambiar el color</string>
 
 </resources>
